# frxx

./: .env.example  .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  凡人修仙传.pen
.claude/: settings.local.json
app/: config.py  main.py  models.py
app/routers/: chat.py  documents.py  health.py  retrieval.py
app/services/: embedding.py  llm.py  retrieval.py
app/utils/: clients.py  log.py  sse.py
scripts/: README.md  milvus_ops.py  rerank.py
web/: README.md  index.html  package.json  tailwind.config.js  typings.d.ts  vite.config.ts
web/src/: App.tsx  config.ts  styles.css  types.ts
web/src/components/: SearchHistory.tsx  SearchResults.tsx  mockData.ts
