[project]
name = "rag"
version = "0.1.0"
description = "凡人修仙传问答系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "flagembedding>=1.4.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.16.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymilvus[bulk-writer,model]>=3.0.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "unstructured>=0.22.31",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "py-spy>=0.4.2",
]
